test/fixtures/architecture-conformance/negative/provider-bypass/hover.ts
// @ts-nocheck
import { resolveTargetEntityDetailed } from '../../../../../src/server/knowledge/resolution/semanticQueryService';

export function provideHover(kb) {
  return kb.publishedState ?? resolveTargetEntityDetailed;
}